<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codeitsussie.team85.expensetracker.ExpenseActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_header"
        android:id="@+id/expense_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/expense_header">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeitsussie.team85.expensetracker.ExpenseActivity"
    android:id="@+id/expenses"
    android:background="@color/background_floating_material_dark"
    android:columnCount="1"
    android:rowCount="6"
    android:columnOrderPreserved="false"
    android:padding="15dp"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true"
    android:nestedScrollingEnabled="false"
    android:isScrollContainer="false"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:id="@+id/add_category"
        android:layout_below="@+id/delete_expense"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:id="@+id/add_expense"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_category"
        android:id="@+id/delete_category"
        android:layout_alignBottom="@+id/add_category"
        android:layout_alignEnd="@+id/view_expense"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_expense"
        android:id="@+id/delete_expense"
        android:layout_below="@+id/add_expense"
        android:layout_alignEnd="@+id/add_expense"
        android:textStyle="bold"
        android:textSize="25dp"
        android:padding="15dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_category"
        android:id="@+id/view_category"
        android:layout_below="@+id/add_category"
        android:layout_alignEnd="@+id/delete_expense"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_expense"
        android:id="@+id/view_expense"
        android:layout_alignTop="@+id/delete_expense"
        android:layout_alignStart="@+id/update_expense"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_expense"
        android:id="@+id/update_expense"
        android:layout_alignTop="@+id/add_expense"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    </GridLayout>
    </ScrollView>

</RelativeLayout>