<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeitsussie.team85.expensetracker.BudgetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Budget_header"
        android:id="@+id/budget_header"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:padding="10dp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
        android:layout_below="@+id/budget_header"
        android:background="@color/background_floating_material_dark">



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeitsussie.team85.expensetracker.BudgetActivity">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_budget"
        android:id="@+id/create_budget"
        android:gravity="center"
            android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_budget"
        android:id="@+id/update_budget"
        android:gravity="center"
        android:layout_below="@+id/create_budget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="25sp" />

</RelativeLayout>
</ScrollView>

</RelativeLayout>