<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.codeitsussie.team85.expensetracker.SummaryActivity"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary_title"
        android:id="@+id/textView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@android:color/white" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:scrollbars="horizontal"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">
        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnCount="2"
            android:background="@android:color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budget_overview"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_columnSpan="2"
                android:background="@android:color/black"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_budget"
                android:id="@+id/tx1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_budget"
                android:id="@+id/c_budget"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_cash"
                android:id="@+id/tx2"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/a_budget"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expenses_overview"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_columnSpan="2"
                android:background="@android:color/black"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_expenses"
                android:id="@+id/tx3"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/expenses"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/li"
                android:id="@+id/tx4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/liabilities"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/savings_overbiew"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_columnSpan="2"
                android:background="@android:color/black"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_sav"
                android:id="@+id/tx5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/c_savings"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_sav"
                android:id="@+id/tx6"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/t_savings"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:layout_gravity="right" />

        </GridLayout>
        </ScrollView>
    </HorizontalScrollView>

</RelativeLayout>
