<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_floating_material_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:id="@+id/home_title"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:typeface="sans"
        android:padding="10dp"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_budget"
        android:id="@+id/available_budget"
        android:layout_alignParentStart="false"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/home_title"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/background_dark"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:id="@+id/balance"
        android:layout_alignParentEnd="false"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/home_title"
        android:layout_toRightOf="@+id/available_budget"
        android:padding="10dp"
        android:background="@android:color/background_dark"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:id="@+id/summary"
        android:layout_below="@+id/available_budget"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="#263eff"
        android:background="@android:color/black"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="horizontal|vertical"
        android:layout_below="@+id/summary"
        android:fillViewport="false"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/sc">
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:columnCount="2"
        android:rowCount="3"
                android:layout_centerInParent="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/budget"
            android:src="@drawable/im_budget"
            android:layout_margin="5dp" />

                <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expenses"
            android:src="@drawable/im_expenses"
                    android:layout_margin="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savings"
            android:src="@drawable/im_savings"
            android:layout_margin="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reports"
            android:src="@drawable/im_reports"
            android:layout_margin="5dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bills"
                    android:src="@drawable/im_bills"
                    android:layout_margin="5dp" />

            </GridLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>